--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "fac896375ae5a17b64088a65dd57405f"
 name = "Looty Box"
 handle = "looty-box"
-application_url = "https://diamond-modeling-bradley-ol.trycloudflare.com"
+application_url = "https://fatty-mold-sad-fallen.trycloudflare.com"
 embedded = true
 
 [build]
@@ -16,9 +16,9 @@ scopes = ""
 
 [auth]
 redirect_urls = [
-  "https://diamond-modeling-bradley-ol.trycloudflare.com/auth/callback",
-  "https://diamond-modeling-bradley-ol.trycloudflare.com/auth/shopify/callback",
-  "https://diamond-modeling-bradley-ol.trycloudflare.com/api/auth/callback"
+  "https://fatty-mold-sad-fallen.trycloudflare.com/auth/callback",
+  "https://fatty-mold-sad-fallen.trycloudflare.com/auth/shopify/callback",
+  "https://fatty-mold-sad-fallen.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
